--- a/programs/Anchor.toml
+++ b/programs/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
-[programs.localnet]
-programs = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+[programs.devnet]
+programs = "9TRRoJBjrAK3BeDSL2ZVor9fw97jzcQkvw2DV3gRXCHN"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
-wallet = "C:\\Users\\Mubashir\\.config/solana/id.json"
+cluster = "devnet"
+wallet = "/home/muzammil/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
