--- a/programs/Anchor.toml
+++ b/programs/Anchor.toml
@@ -1,14 +1,14 @@
 [features]
 seeds = false
 [programs.devnet]
-programs = "9TRRoJBjrAK3BeDSL2ZVor9fw97jzcQkvw2DV3gRXCHN"
+programs = "6u79vYDv2ornC94WwJFRmH4AcaGyy8bR4LFG662MLvfr"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "devnet"
-wallet = "/home/muzammil/.config/solana/id.json"
+wallet = "/home/codespace/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
